avoid mmaping on ntfs partitions

BUG: 354633